--- a/MassTransitDemo.Contract/MassTransitDemo.Contract.csproj
+++ b/MassTransitDemo.Contract/MassTransitDemo.Contract.csproj
@@ -29,6 +29,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,6 +53,11 @@
     <Compile Include="IOtherStuffDone.cs" />
     <Compile Include="IStuffDone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrafficLight\ICreateTrafficLightCommand.cs" />
+    <Compile Include="TrafficLight\IGoGreenCommand.cs" />
+    <Compile Include="TrafficLight\IGoRedCommand.cs" />
+    <Compile Include="TrafficLight\ILightChangedEvent.cs" />
+    <Compile Include="TrafficLight\ITrafficLightCreatedEvent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
