--- a/MassTransitDemo.TrafficLightServer.Stateless/MassTransitDemo.TrafficLightServer.Stateless.csproj
+++ b/MassTransitDemo.TrafficLightServer.Stateless/MassTransitDemo.TrafficLightServer.Stateless.csproj
@@ -91,17 +91,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateTrafficLightCommandConsumer.cs" />
-    <Compile Include="GoCommandConsumer.cs" />
+    <Compile Include="Domain\ISaga.cs" />
+    <Compile Include="Handlers\CreateTrafficLightCommandConsumer.cs" />
+    <Compile Include="Handlers\GoCommandConsumer.cs" />
+    <Compile Include="Handlers\HandlerExtensions.cs" />
+    <Compile Include="Persistance\IRepository.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository.cs" />
-    <Compile Include="Saga.cs" />
+    <Compile Include="Persistance\Repository.cs" />
+    <Compile Include="Domain\Saga.cs" />
     <Compile Include="Service.cs" />
-    <Compile Include="State.cs" />
-    <Compile Include="StopCommandConsumer.cs" />
-    <Compile Include="TrafficLight.cs" />
-    <Compile Include="Trigger.cs" />
+    <Compile Include="Domain\State.cs" />
+    <Compile Include="Handlers\StopCommandConsumer.cs" />
+    <Compile Include="Domain\TrafficLight.cs" />
+    <Compile Include="Domain\Trigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
